--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node-sass": "^4.14.1"
   },
   "scripts": {
-    "dev": "npx nodemon server/server.js -w server"
+    "server": "npx nodemon server/server.js -w server"
   },
   "keywords": [],
   "author": "",
